[package]
name = "echo-tree-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
schemars = "0.8.16"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.114"
sled = "0.34.7"
warp = "0.3.6"
pretty_env_logger = { version = "0.5.0", optional = true }

[features]
logging = ["pretty_env_logger"]