[package]
name = "echo_tree_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../common/protocol" }
log = "^0.4"
schemars = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sled = "^0.34"
warp = { version="^0.3", features = ["tls"] }
pretty_env_logger = { version = "^0.5", optional = true }
tokio = { version = "^1.36", features = ["full"] }
tokio-stream = "^0.1"
rcgen = "^0.12"
futures = { version = "^0.3", default-features = false }
uuid = { version = "^1.7", features = ["serde", "v4"] }
local-ip-address = "0.6.1"

[features]
logging = ["pretty_env_logger"]
