[package]
name = "schema-gen"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[build-dependencies]
protocol = { path = "protocol"}
schemars = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"